fixed footer z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -156,6 +156,7 @@ footer {
   text-transform: uppercase;
   color: $grey9;
   border-top: 1px solid $grey4;
+  z-index: 999;
 
   .icons {
     margin-top: 10px;
